[project]
name = "snooze-server"
version = "1.6.4"
description = "Monitoring tool for logs aggregation and alerting"
authors = [
    { name = "Florian Dematraz", email = "florian.dematraz@snoozeweb.net" },
    { name = "Guillaume Ludinard", email = "guillaume.ludi@gmail.com" },
]
requires-python = ">=3.13"
readme = "README.md"
# license = "AGPL-3.0-or-later"
# license-files = ["LICENSE"]
dependencies = [
    "click>=8.1,<9",
    "falcon>=4.0,<5",
    "Jinja2>=3.1,<4",
    "ldap3>=2.9.1,<3",
    "MarkupSafe>=2.1,<4",
    "prometheus-client>=0.20,<1",
    "PyJWT>=2.8,<3",
    "pymongo>=4.6,<4.7",
    "pyparsing>=3.0,<4",
    "python-dateutil>=2.8.2,<3",
    "PyYAML>=6.0.1,<7",
    "requests-unixsocket>=0.3,<1",
    "requests>=2.32,<3",
    "tinydb>=4.5,<4.6",  # 4.6+ removed implicit integer-index path traversal, breaks dotted array-index queries
    "waitress>=3.0,<4",
    "kombu>=5.3,<6",
    "pydantic>=1.10.18,<2",
    "tenacity>=8.2,<10",
    "filelock>=3.13,<4",
    "python-json-logger>=2.0.7,<4",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp>=1.27,<2",
    "opentelemetry-instrumentation-falcon>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-instrumentation-pymongo>=0.48b0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.2,<4",
]

[project.scripts]
snooze-server = "snooze.__main__:main"
snooze = "snooze.cli.__main__:snooze"
check_snooze_server = "snooze.cli.health:check_snooze_server"

[dependency-groups]
lint = [
    "pylint>=3.2,<4",
    "pyright>=1.1.380,<2",
    "pylint-pydantic>=0.3,<1",
]
security = ["bandit>=1.7.9,<2"]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-data>=0.4,<0.5",
    "mongomock>=4.3,<5",
    "pytest-spec>=4,<5",
    "python-mimeparse>=1.6.0,<2",
    "pytest-sugar>=1.0,<2",
    "pytest-timeout>=2.3,<3",
    "freezegun>=1.5,<2",
    "responses>=0.25,<1",
    "psycopg[binary,pool]>=3.2,<4",
    "testcontainers[postgres]>=4,<5",
]
build = [
    "virtualenv>=20.25,<21",
    "invoke>=2.2,<3",
    "toml>=0.10.2,<0.11",
    "Sphinx>=7,<9",
    "sphinx-book-theme>=1,<2",
]

[tool.uv]
default-groups = [
    "lint",
    "security",
    "test",
    "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snooze"]

[tool.pylint.MASTER]
load-plugins = ['pylint_pydantic']
extension-pkg-whitelist = ['falcon', 'pydantic']

[tool.pylint."MESSAGE CONTROL"]
disable = ['no-else-return', 'too-few-public-methods']

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = "tests"
log_level = "DEBUG"
log_cli_format = "%(asctime)s %(name)-20s %(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src", "."]
markers = [
    "mongo_only: test depends on MongoDB-specific behaviour (skipped on Postgres backend)",
    "postgres_only: test depends on PostgreSQL-specific behaviour (skipped on Mongo backend)",
]


[tool.ruff.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]
