[project]
name = "snooze-googlechat"
version = "1.0.18"
requires-python = "~=3.8"
dependencies = [
    "falcon",
    "google-api-python-client",
    "httplib2",
    "protobuf",
    "pyparsing",
    "python-dateutil",
    "pyyaml",
    "snooze-client",
    "google-cloud-pubsub",
    "waitress",
    "google-apps-chat>=0.2.9",
    "google-auth>=2.40.1",
    "pydantic>=2.10.6",
    "google-apps-card>=0.1.8",
    "types-protobuf>=5.29.1.20241207",
]

[tool.uv.sources]
snooze-client = {path = "../client"}

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snooze-googlechat = "snooze_googlechat.main:main"
