[tool.poetry]
name = "snooze_jira"
version = "0.7.0"
description = "JIRA ticket creation output plugin for SnoozeWeb"
authors = [
    "Florian Dematraz <florian.dematraz@snoozeweb.net>",
]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
snooze-jira = "snooze_jira.main:main"

[tool.poetry.dependencies]
python = "^3.8"
falcon = "*"
waitress = "*"
requests = "*"
python-dateutil = "*"
pyyaml = "*"
snooze-client = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
responses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
