[tool.poetry]
name = "snooze_teams"
version = "0.7.0"
description = "Microsoft Teams bot for SnoozeWeb"
authors = [
    "Florian Dematraz <florian.dematraz@snoozeweb.net>",
]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
snooze-teams = "snooze_teams.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pyparsing = "*"
python-dateutil = "*"
pyyaml = "*"
o365 = "*"
waitress = "*"
falcon = "*"
snooze-client = { file = "/home/florian/snooze_client/dist/snooze_client-1.0.20-py3-none-any.whl" }

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
